status coming from DB